--- a/CSS/mediservice_styles_2.css
+++ b/CSS/mediservice_styles_2.css
@@ -28,7 +28,7 @@
 		font-weight: bold;
 	    text-transform: uppercase;
 	}
-	.fluid-banner{
+	#site_banner{
 		height: 335px;
 	}
 	#body_image{
